# autodesk_kiwi

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  EMAIL_SETUP.md  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml
api/: .env.example  auth.py  config.py  db.py  exceptions.py  logger.py  main.py  models.py  requirements.txt
api/routes/: analytics.py  email.py  hyperplanning.py  integrations.py  meta.py  spotify.py  tasks.py
api/tests/: __init__.py  conftest.py  test_meta.py  test_tasks.py
docs/: GRADES_IMPORT.md
web/: app.js  index.html  manifest.json  style.css  sw.js
